# IDP-public

./: README.md  main.py  overallnavigation.py  pyproject.toml  pyrightconfig.json  robot.py
diagrams/: README.md
lib/: config.py  state.py
lib/grabber/: config.py
lib/grabber/components/: grabberControl.py  resistanceSensing.py  servoController.py  state.py
lib/grabber/components/types/: resistance.py  servo.py
lib/grabber/components/utils/: resistance.py  servo.py
lib/logger/: logger.py
lib/misc/: config.py  state.py
lib/misc/components/: LEDArray.py  button.py  tof_VL53L0X.py
lib/misc/components/utils/: VL53L0X.py
lib/navigation/: config.py  state.py
lib/navigation/components/: PDControl.py  lineSensor.py  motionControl.py  motorController.py  navigation.py  pathfinding.py
lib/navigation/components/types/: lineSensor.py  motionControl.py  motor.py  navigation.py
lib/navigation/components/utils/: PDControl.py  motionControl.py  motor.py  movingAverage.py
lib/navigation/simple_pid/: PID.py  PID.pyi
